[gd_scene load_steps=38 format=2]

[ext_resource path="res://animations/walk/pixil-frame-11.png" type="Texture" id=1]
[ext_resource path="res://animations/walk/pixil-frame-12.png" type="Texture" id=2]
[ext_resource path="res://animations/walk/pixil-frame-0.png" type="Texture" id=3]
[ext_resource path="res://animations/walk/pixil-frame-5.png" type="Texture" id=4]
[ext_resource path="res://animations/walk/pixil-frame-4.png" type="Texture" id=5]
[ext_resource path="res://animations/walk/pixil-frame-10.png" type="Texture" id=6]
[ext_resource path="res://animations/walk/pixil-frame-1.png" type="Texture" id=7]
[ext_resource path="res://animations/walk/pixil-frame-6.png" type="Texture" id=8]
[ext_resource path="res://animations/walk/pixil-frame-2.png" type="Texture" id=9]
[ext_resource path="res://animations/walk/pixil-frame-3.png" type="Texture" id=10]
[ext_resource path="res://animations/walk/pixil-frame-7.png" type="Texture" id=11]
[ext_resource path="res://animations/walk/pixil-frame-8.png" type="Texture" id=12]
[ext_resource path="res://animations/walk/pixil-frame-9.png" type="Texture" id=13]
[ext_resource path="res://Player.gd" type="Script" id=14]
[ext_resource path="res://animations/attack1/pixil-frame-2.png" type="Texture" id=15]
[ext_resource path="res://animations/attack1/pixil-frame-4.png" type="Texture" id=16]
[ext_resource path="res://animations/attack1/pixil-frame-3.png" type="Texture" id=17]
[ext_resource path="res://animations/attack1/pixil-frame-1.png" type="Texture" id=18]
[ext_resource path="res://animations/attack1/pixil-frame-5.png" type="Texture" id=19]
[ext_resource path="res://animations/attack1/pixil-frame-0.png" type="Texture" id=20]
[ext_resource path="res://animations/health/pixil-frame-0.png" type="Texture" id=21]
[ext_resource path="res://animations/health/pixil-frame-1.png" type="Texture" id=22]
[ext_resource path="res://animations/health/pixil-frame-7.png" type="Texture" id=23]
[ext_resource path="res://animations/health/pixil-frame-5.png" type="Texture" id=24]
[ext_resource path="res://animations/health/pixil-frame-8.png" type="Texture" id=25]
[ext_resource path="res://animations/health/pixil-frame-4.png" type="Texture" id=26]
[ext_resource path="res://animations/health/pixil-frame-6.png" type="Texture" id=27]
[ext_resource path="res://animations/health/pixil-frame-9.png" type="Texture" id=28]
[ext_resource path="res://animations/health/pixil-frame-10.png" type="Texture" id=29]
[ext_resource path="res://animations/health/pixil-frame-3.png" type="Texture" id=30]
[ext_resource path="res://animations/health/pixil-frame-2.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 19 ) ],
"loop": true,
"name": "attack",
"speed": 30.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 6.66679

[sub_resource type="CapsuleShape2D" id=7]
radius = 2.0
height = 15.5053

[sub_resource type="CapsuleShape2D" id=3]
height = 95.6547

[sub_resource type="CapsuleShape2D" id=4]
radius = 28.0
height = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "health",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
position = Vector2( 150, 232 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 14 )
speed = 80

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 1 )
animation = "attack"

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9.961 )
shape = SubResource( 6 )

[node name="hitbox2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.47499 )
shape = SubResource( 7 )

[node name="dashRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dashRange"]
position = Vector2( 0, 30 )
scale = Vector2( 1, 0.807 )
shape = SubResource( 3 )

[node name="meleeRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="meleeRange"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="health" type="Node2D" parent="."]
position = Vector2( 0, -9.983 )

[node name="healthBar" type="AnimatedSprite" parent="health"]
position = Vector2( 0, 0.391006 )
frames = SubResource( 5 )
animation = "health"
offset = Vector2( 0, -17.039 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="dashRange" to="." method="_on_dash_range_area_entered"]
[connection signal="area_entered" from="meleeRange" to="." method="_on_meleeRange_area_entered"]
